Remove old config and files, Modify new configurations

--- a/Pipfile
+++ b/Pipfile
@@ -4,19 +4,19 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-flake8 = "*"
-flake8-docstrings = "*"
 black = "*"
-pre-commit = "*"
-mypy = "*"
 tox = "*"
-pydocstyle = "*"
+flake8 = "*"
+flake8-import-order = "*"
+flake8-docstrings = "*"
+pre-commit = "*"
 pytest = "*"
+mypy = "*"
 
 [packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
 
 [pipenv]
 allow_prereleases = true
