--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,18 @@
+repos:
 -   repo: https://github.com/ambv/black
     rev: stable
     hooks:
     - id: black
-      language_version: python3.8
--   repo: https://github.com/pycqa/pydocstyle
-    rev: 4.0.0  # pick a git hash / tag to point to
-    hooks:
-    -   id: pydocstyle
+      language_version: python3.7
 
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.2 # pick a git hash / tag to point to
+    hooks:
+    - id: flake8
+      additional_dependencies: [flake8-import-order, flake8-docstrings]
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v0.780'  # Use the sha / tag you want to point at https://github.com/python/mypy/tags 
+    hooks:
+    - id: mypy
+      entry: bash -c 'mypy $(find ./api -type f -name '*.py') && mypy $(find ./etl -type f -name '*.py') && mypy $(find ./nlp -type f -name '*.py')'
