--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ setenv=
     PIPENV_VERBOSITY=-1
 
 [testenv]
-basepython=python3.8
+basepython=python3.7
 deps=pipenv
 commands=
     pipenv install --dev
@@ -20,19 +20,18 @@ setenv=
 [testenv:lint]
 commands=
     pipenv run black . --check
-    pipenv run flake8
-    pipenv run pydocstyle .
+    pipenv run flake8 --docstring-convention google
 
 [testenv:type-check]
 whitelist_externals=bash
 commands=
     bash -c "pipenv run mypy $(find ./src -type f -name '*.py')"
-    ;bash -c "pipenv run mypy $(find ./sql -type f -name '*.py')"
     bash -c "pipenv run mypy $(find ./tests -type f -name '*.py')"
 
 [testenv:unit]
+whitelist_externals=bash
 commands=
-    pipenv run pytest tests/unit/sample.py
+    bash -c "pipenv run pytest $(find ./tests -type f -name '*.py')"
 
 [pytest]
 addopts = -p no:warnings
