--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: stable
+    rev: 20.8b1
     hooks:
     - id: black
       language_version: python3.7
 
 -   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.2 # pick a git hash / tag to point to
+    rev: 3.8.4 # pick a git hash / tag to point to
     hooks:
     - id: flake8
       additional_dependencies: [flake8-import-order, flake8-docstrings]
